# HaiveControl

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  ROADMAP.md  build.bat  capture.py  deployhub.json  discovery.py  haivectl.py  hub.py  input_control.py  install.ps1  install.sh  mcp_server.py  persistence.py  requirements-mcp.txt  requirements.txt  run_hub.command  server.py  tls.py
.cargo/: config.toml
.github/workflows/: build.yml  sign-release.yml
crates/agent/: Cargo.toml
crates/agent/src/: analysis.rs  capture.rs  config.rs  discovery.rs  http.rs  input.rs  main.rs  persistence.rs  presence.rs  relay.rs  schedule.rs  shell.rs  tls.rs  wakelock.rs  wayland.rs  winsession.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/hub/: Cargo.toml
crates/hub/src/: ca.rs  main.rs  relay.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: main.rs
