[package]
name = "haive-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "haivectl"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "multipart"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
