[package]
name = "haive-hub"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "HaiveHub"
path = "src/main.rs"

[dependencies]
tiny_http = "0.12"
mdns-sd = "0.11"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
base64 = "0.22"
uuid = { version = "1", features = ["v5"] }
flate2 = "1"
rcgen = { version = "0.13", features = ["x509-parser"] }
sha2 = "0.10"
