[package]
name = "haive-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "haive-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "2", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
base64 = "0.22"
anyhow = "1"
